add product search engine